Logo Stretching issue Resolved

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
-form{
-    width: 100%;
-}
+@media (min-width: 768px) {
+    form {
+      width: 100%;
+    }
+  }
+  
